docs: Add swagger for transaction API
